# MEnet

./: .gitignore  Dockerfile  MANIFEST.in  README.md  conda_env.yaml  setup.cfg
MEnet/: __init__.py  __main__.py  _version.py  cli.py  model.py  models.py  predict.py  tile.py  train.py  utils.py
create_ref/: README.md  array2bismark.py  convert_AMED-CREST.py  convert_blueprint_biscov.py  convert_encode.bdg_biscov.py  createref_multi.py  tiling_bismark.py
create_ref/TCGA/: TCGA_projects.csv  get_TCGA450K.R
create_ref/data/: 210411_categories.csv  210411_ref.csv
