[metadata]
name = MEnet
version = attr: MEnet._version.__version__
description = MEnet is a neural-net based deconvolution method for methylation data.
long_description = file: README.md
# long_description_content_type = text/markdown
license = Attribution-NonCommercial 4.0 International
license_file = LICENSE.md
url = https://github.com/yyoshiaki/MEnet
Author = Yoshiaki Yasumizu, M.D.
Author-email = yyasumizu@ifrec.osaka-u.ac.jp

[options]
packages=find:
install_requires= 
        torch~=1.6.0
        numpy
        pandas

[options.packages.find]
where=MEnet