[metadata]
name = MEnet
version = attr: MEnet._version.__version__
description = MEnet is a neural-net based deconvolution method for methylation data.
long_description = file: README.md
license = Attribution-NonCommercial 4.0 International
license_file = LICENSE.md
url = https://github.com/yyoshiaki/MEnet
Author = Yoshiaki Yasumizu, M.D.
Author-email = yyasumizu@ifrec.osaka-u.ac.jp

[options]
packages=find:
install_requires= 
        torch~=1.6.0
        numpy
        pandas
        scikit-learn>=0.24.0
        matplotlib
        seaborn
        tqdm
        pyyaml
        optuna

[options.entry_points]
console_scripts =
    MEnet = MEnet.cli:main

[options.data_files]
data = data/*